--- a/Amit_Tripathi_nn.ipynb
+++ b/Amit_Tripathi_nn.ipynb
@@ -6423,59 +6423,119 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcV6OdI4dRW1",
-        "outputId": "2330704c-48a3-4059-87ac-01f071f089ac"
+        "outputId": "71853f5b-94e3-4bd3-c030-c2823763fc6e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/20\n",
-            "169/169 [==============================] - 39s 211ms/step - loss: 2.5353 - accuracy: 0.3518 - val_loss: 16.7702 - val_accuracy: 0.1418\n",
-            "Epoch 2/20\n",
-            "169/169 [==============================] - 33s 192ms/step - loss: 1.4254 - accuracy: 0.4566 - val_loss: 6.3373 - val_accuracy: 0.2732\n",
-            "Epoch 3/20\n",
-            "169/169 [==============================] - 35s 202ms/step - loss: 1.2943 - accuracy: 0.5219 - val_loss: 2.2696 - val_accuracy: 0.4484\n",
-            "Epoch 4/20\n",
-            "169/169 [==============================] - 35s 202ms/step - loss: 1.1726 - accuracy: 0.5684 - val_loss: 1.2006 - val_accuracy: 0.5999\n",
-            "Epoch 5/20\n",
-            "169/169 [==============================] - 38s 222ms/step - loss: 1.0407 - accuracy: 0.6129 - val_loss: 1.1279 - val_accuracy: 0.6006\n",
-            "Epoch 6/20\n",
-            "169/169 [==============================] - 47s 273ms/step - loss: 0.9288 - accuracy: 0.6478 - val_loss: 0.8618 - val_accuracy: 0.6771\n",
-            "Epoch 7/20\n",
-            "169/169 [==============================] - 49s 280ms/step - loss: 0.8079 - accuracy: 0.6955 - val_loss: 1.0402 - val_accuracy: 0.6414\n",
-            "Epoch 8/20\n",
-            "169/169 [==============================] - 44s 250ms/step - loss: 0.7404 - accuracy: 0.7177 - val_loss: 1.0096 - val_accuracy: 0.6526\n",
-            "Epoch 9/20\n",
-            "169/169 [==============================] - 34s 196ms/step - loss: 0.6833 - accuracy: 0.7413 - val_loss: 1.3750 - val_accuracy: 0.5895\n",
-            "Epoch 10/20\n",
-            "169/169 [==============================] - 35s 199ms/step - loss: 0.6242 - accuracy: 0.7672 - val_loss: 1.0662 - val_accuracy: 0.6496\n",
-            "Epoch 11/20\n",
-            "169/169 [==============================] - 36s 208ms/step - loss: 0.5483 - accuracy: 0.7919 - val_loss: 1.9366 - val_accuracy: 0.5330\n",
-            "Epoch 12/20\n",
-            "169/169 [==============================] - 34s 194ms/step - loss: 0.5038 - accuracy: 0.8138 - val_loss: 0.8214 - val_accuracy: 0.7372\n",
-            "Epoch 13/20\n",
-            "169/169 [==============================] - 35s 201ms/step - loss: 0.4731 - accuracy: 0.8234 - val_loss: 0.8901 - val_accuracy: 0.7209\n",
-            "Epoch 14/20\n",
-            "169/169 [==============================] - 35s 199ms/step - loss: 0.4341 - accuracy: 0.8394 - val_loss: 0.9115 - val_accuracy: 0.7120\n",
-            "Epoch 15/20\n",
-            "169/169 [==============================] - 34s 194ms/step - loss: 0.4009 - accuracy: 0.8464 - val_loss: 0.7999 - val_accuracy: 0.7454\n",
-            "Epoch 16/20\n",
-            "169/169 [==============================] - 38s 218ms/step - loss: 0.3537 - accuracy: 0.8681 - val_loss: 0.8859 - val_accuracy: 0.7357\n",
-            "Epoch 17/20\n",
-            "169/169 [==============================] - 38s 218ms/step - loss: 0.3451 - accuracy: 0.8689 - val_loss: 0.8506 - val_accuracy: 0.7431\n",
-            "Epoch 18/20\n",
-            "169/169 [==============================] - 38s 218ms/step - loss: 0.3346 - accuracy: 0.8735 - val_loss: 1.3620 - val_accuracy: 0.6837\n",
-            "Epoch 19/20\n",
-            "169/169 [==============================] - 33s 189ms/step - loss: 0.3313 - accuracy: 0.8759 - val_loss: 1.0447 - val_accuracy: 0.7157\n",
-            "Epoch 20/20\n",
-            "169/169 [==============================] - 35s 200ms/step - loss: 0.3433 - accuracy: 0.8776 - val_loss: 1.6186 - val_accuracy: 0.6177\n"
+            "Epoch 1/50\n",
+            "169/169 [==============================] - 34s 192ms/step - loss: 0.2790 - accuracy: 0.8974 - val_loss: 0.8256 - val_accuracy: 0.7751\n",
+            "Epoch 2/50\n",
+            "169/169 [==============================] - 38s 222ms/step - loss: 0.2900 - accuracy: 0.8986 - val_loss: 1.0330 - val_accuracy: 0.7372\n",
+            "Epoch 3/50\n",
+            "169/169 [==============================] - 33s 192ms/step - loss: 0.2449 - accuracy: 0.9091 - val_loss: 0.9923 - val_accuracy: 0.7216\n",
+            "Epoch 4/50\n",
+            "169/169 [==============================] - 35s 203ms/step - loss: 0.2805 - accuracy: 0.9026 - val_loss: 1.3025 - val_accuracy: 0.6325\n",
+            "Epoch 5/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.2554 - accuracy: 0.9091 - val_loss: 1.4992 - val_accuracy: 0.6578\n",
+            "Epoch 6/50\n",
+            "169/169 [==============================] - 34s 195ms/step - loss: 0.2103 - accuracy: 0.9243 - val_loss: 1.1338 - val_accuracy: 0.7075\n",
+            "Epoch 7/50\n",
+            "169/169 [==============================] - 38s 220ms/step - loss: 0.2155 - accuracy: 0.9216 - val_loss: 1.9559 - val_accuracy: 0.6244\n",
+            "Epoch 8/50\n",
+            "169/169 [==============================] - 38s 219ms/step - loss: 0.2273 - accuracy: 0.9204 - val_loss: 1.2288 - val_accuracy: 0.7164\n",
+            "Epoch 9/50\n",
+            "169/169 [==============================] - 38s 218ms/step - loss: 0.2126 - accuracy: 0.9243 - val_loss: 1.3725 - val_accuracy: 0.6771\n",
+            "Epoch 10/50\n",
+            "169/169 [==============================] - 38s 220ms/step - loss: 0.2232 - accuracy: 0.9186 - val_loss: 0.8349 - val_accuracy: 0.7743\n",
+            "Epoch 11/50\n",
+            "169/169 [==============================] - 34s 194ms/step - loss: 0.2238 - accuracy: 0.9134 - val_loss: 1.1826 - val_accuracy: 0.6971\n",
+            "Epoch 12/50\n",
+            "169/169 [==============================] - 38s 218ms/step - loss: 0.1923 - accuracy: 0.9236 - val_loss: 0.9206 - val_accuracy: 0.7461\n",
+            "Epoch 13/50\n",
+            "169/169 [==============================] - 35s 201ms/step - loss: 0.2452 - accuracy: 0.9167 - val_loss: 0.9999 - val_accuracy: 0.7513\n",
+            "Epoch 14/50\n",
+            "169/169 [==============================] - 33s 189ms/step - loss: 0.2164 - accuracy: 0.9254 - val_loss: 0.7687 - val_accuracy: 0.7944\n",
+            "Epoch 15/50\n",
+            "169/169 [==============================] - 38s 220ms/step - loss: 0.2231 - accuracy: 0.9234 - val_loss: 1.3416 - val_accuracy: 0.6526\n",
+            "Epoch 16/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.2060 - accuracy: 0.9282 - val_loss: 1.3432 - val_accuracy: 0.7223\n",
+            "Epoch 17/50\n",
+            "169/169 [==============================] - 38s 218ms/step - loss: 0.1789 - accuracy: 0.9299 - val_loss: 1.7537 - val_accuracy: 0.6563\n",
+            "Epoch 18/50\n",
+            "169/169 [==============================] - 38s 218ms/step - loss: 0.1807 - accuracy: 0.9312 - val_loss: 0.9370 - val_accuracy: 0.7491\n",
+            "Epoch 19/50\n",
+            "169/169 [==============================] - 38s 219ms/step - loss: 0.1903 - accuracy: 0.9323 - val_loss: 0.8907 - val_accuracy: 0.7832\n",
+            "Epoch 20/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.1601 - accuracy: 0.9407 - val_loss: 0.9284 - val_accuracy: 0.7892\n",
+            "Epoch 21/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.1595 - accuracy: 0.9379 - val_loss: 0.9802 - val_accuracy: 0.7780\n",
+            "Epoch 22/50\n",
+            "169/169 [==============================] - 35s 199ms/step - loss: 0.1643 - accuracy: 0.9364 - val_loss: 1.1383 - val_accuracy: 0.7157\n",
+            "Epoch 23/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1554 - accuracy: 0.9418 - val_loss: 1.4309 - val_accuracy: 0.7157\n",
+            "Epoch 24/50\n",
+            "169/169 [==============================] - 34s 198ms/step - loss: 0.1587 - accuracy: 0.9427 - val_loss: 0.8666 - val_accuracy: 0.7854\n",
+            "Epoch 25/50\n",
+            "169/169 [==============================] - 33s 192ms/step - loss: 0.1399 - accuracy: 0.9453 - val_loss: 1.1727 - val_accuracy: 0.7565\n",
+            "Epoch 26/50\n",
+            "169/169 [==============================] - 38s 219ms/step - loss: 0.1699 - accuracy: 0.9382 - val_loss: 2.0808 - val_accuracy: 0.5583\n",
+            "Epoch 27/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1764 - accuracy: 0.9368 - val_loss: 1.2324 - val_accuracy: 0.7632\n",
+            "Epoch 28/50\n",
+            "169/169 [==============================] - 35s 201ms/step - loss: 0.1580 - accuracy: 0.9414 - val_loss: 0.9766 - val_accuracy: 0.7884\n",
+            "Epoch 29/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.1831 - accuracy: 0.9349 - val_loss: 2.7073 - val_accuracy: 0.4915\n",
+            "Epoch 30/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1833 - accuracy: 0.9395 - val_loss: 1.2841 - val_accuracy: 0.7105\n",
+            "Epoch 31/50\n",
+            "169/169 [==============================] - 38s 220ms/step - loss: 0.1695 - accuracy: 0.9412 - val_loss: 2.5958 - val_accuracy: 0.5100\n",
+            "Epoch 32/50\n",
+            "169/169 [==============================] - 33s 189ms/step - loss: 0.1615 - accuracy: 0.9453 - val_loss: 1.2890 - val_accuracy: 0.7610\n",
+            "Epoch 33/50\n",
+            "169/169 [==============================] - 33s 189ms/step - loss: 0.1657 - accuracy: 0.9464 - val_loss: 1.0059 - val_accuracy: 0.7892\n",
+            "Epoch 34/50\n",
+            "169/169 [==============================] - 34s 199ms/step - loss: 0.1421 - accuracy: 0.9455 - val_loss: 1.0477 - val_accuracy: 0.7788\n",
+            "Epoch 35/50\n",
+            "169/169 [==============================] - 35s 201ms/step - loss: 0.1225 - accuracy: 0.9544 - val_loss: 1.4531 - val_accuracy: 0.7394\n",
+            "Epoch 36/50\n",
+            "169/169 [==============================] - 34s 198ms/step - loss: 0.1285 - accuracy: 0.9488 - val_loss: 0.9348 - val_accuracy: 0.7996\n",
+            "Epoch 37/50\n",
+            "169/169 [==============================] - 34s 192ms/step - loss: 0.1246 - accuracy: 0.9540 - val_loss: 1.0949 - val_accuracy: 0.8025\n",
+            "Epoch 38/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.1318 - accuracy: 0.9520 - val_loss: 1.2852 - val_accuracy: 0.7736\n",
+            "Epoch 39/50\n",
+            "169/169 [==============================] - 35s 196ms/step - loss: 0.1567 - accuracy: 0.9442 - val_loss: 1.1703 - val_accuracy: 0.7342\n",
+            "Epoch 40/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1476 - accuracy: 0.9460 - val_loss: 1.0693 - val_accuracy: 0.7832\n",
+            "Epoch 41/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1551 - accuracy: 0.9429 - val_loss: 1.2098 - val_accuracy: 0.7996\n",
+            "Epoch 42/50\n",
+            "169/169 [==============================] - 34s 198ms/step - loss: 0.1440 - accuracy: 0.9457 - val_loss: 9.7299 - val_accuracy: 0.2880\n",
+            "Epoch 43/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1391 - accuracy: 0.9507 - val_loss: 2.1243 - val_accuracy: 0.7209\n",
+            "Epoch 44/50\n",
+            "169/169 [==============================] - 35s 200ms/step - loss: 0.1430 - accuracy: 0.9486 - val_loss: 1.4350 - val_accuracy: 0.7342\n",
+            "Epoch 45/50\n",
+            "169/169 [==============================] - 38s 218ms/step - loss: 0.1255 - accuracy: 0.9534 - val_loss: 1.2016 - val_accuracy: 0.7587\n",
+            "Epoch 46/50\n",
+            "169/169 [==============================] - 33s 193ms/step - loss: 0.1316 - accuracy: 0.9516 - val_loss: 0.9969 - val_accuracy: 0.7921\n",
+            "Epoch 47/50\n",
+            "169/169 [==============================] - 34s 190ms/step - loss: 0.1215 - accuracy: 0.9534 - val_loss: 1.1438 - val_accuracy: 0.8003\n",
+            "Epoch 48/50\n",
+            "169/169 [==============================] - 33s 190ms/step - loss: 0.1099 - accuracy: 0.9555 - val_loss: 2.2126 - val_accuracy: 0.6845\n",
+            "Epoch 49/50\n",
+            "169/169 [==============================] - 35s 199ms/step - loss: 0.1279 - accuracy: 0.9509 - val_loss: 1.9994 - val_accuracy: 0.6897\n",
+            "Epoch 50/50\n",
+            "169/169 [==============================] - 33s 191ms/step - loss: 0.1094 - accuracy: 0.9572 - val_loss: 1.2574 - val_accuracy: 0.7788\n"
           ]
         }
       ],
@@ -6553,7 +6613,7 @@
         "id": "Way4lakC4_p0"
       },
       "source": [
-        "#### We see there there is clear improvement after rebalancing the classes. There is no issue of overfitting or underfitting this time.\n",
+        "#### We see there there is clear improvement after rebalancing the classes. There is no issue of underfitting this time. However there is some overfitting is still there which could be improved further with suitable CNN architecture (include more dropouts etc).\n",
         "\n"
       ]
     },
